# cefi-cmake

./: README.md  default.nix  run.sh
nix/: c-efi.nix  c-efi.pc  uefi-run.nix
src/: CMakeLists.txt  main.c
